ddi/serde/derive/tests/compile_tests/01-union.stderr
error: deriving `mcr-ddi-derive::Ddi` for a `union` is not supported
 --> tests/compile_tests/01-union.rs:4:1
  |
4 | union A {
  | ^^^^^
